* 監査系の列をアレする * readonly追加 ほかいろいろ
git-svn-id: http://svn.local/svnroot/ennichi/trunk/kaede2nd@148 1f740167-d0ba-4b02-8f16-c7307cbaec5e

--- a/kaede2nd/Version.resx
+++ b/kaede2nd/Version.resx
@@ -119,7 +119,7 @@
   </resheader>
   <data name="textBox1.Text" xml:space="preserve">
     <value>ゆかり姫萌え萌えソフトウェア
-製作：第58期縁日班長 横山 秀
+製作：筑駒58期縁日班長 横山 秀
  <filtered>
  <filtered>
 
@@ -127,7 +127,7 @@
 楓ちゃん萌え萌えソフトウェア
 http://ripjohn.s28.xrea.com/highschool/kaede/index.html
 rosa gigantea 005
-製作：第51期縁日班 宮川 拓
+製作：筑駒51期縁日班 宮川 拓
   ripjohn@s28.xrea.com
   <filtered></value>
   </data>
