--- a/kaede2nd/Version.resx
+++ b/kaede2nd/Version.resx
@@ -129,6 +129,9 @@ http://ripjohn.s28.xrea.com/highschool/kaede/index.html
 rosa gigantea 005
 製作：筑駒51期縁日班 宮川 拓
   ripjohn@s28.xrea.com
-  <filtered></value>
+  <filtered>
+
+DotNetBarcode
+http://www.geocities.jp/japan_inf/DotNetBarcode/Setsumei.html</value>
   </data>
 </root>
