--- a/kaede2nd/Version.resx
+++ b/kaede2nd/Version.resx
@@ -125,11 +125,17 @@
 
 前身
 楓ちゃん萌え萌えソフトウェア
-http://ripjohn.s28.xrea.com/highschool/kaede/index.html
+http://ripjohn.net/highschool/kaede/index.html
 rosa gigantea 005
 製作：筑駒51期縁日班 宮川 拓
   ripjohn@s28.xrea.com
   <filtered>
+
+Seasar S2dao.NET
+http://s2dao.net.seasar.org/ja/
+
+System.Data.SQLite
+http://sqlite.phxsoftware.com/
 
 DotNetBarcode
 http://www.geocities.jp/japan_inf/DotNetBarcode/Setsumei.html</value>
