--- a/kaede2nd/Version.resx
+++ b/kaede2nd/Version.resx
@@ -134,6 +134,9 @@ rosa gigantea 005
 Seasar S2dao.NET
 http://s2dao.net.seasar.org/ja/
 
+Apache log4net
+http://logging.apache.org/log4net/index.html
+
 System.Data.SQLite
 http://sqlite.phxsoftware.com/
 
