バージョン情報更新
git-svn-id: http://svn.local/svnroot/ennichi/trunk/kaede2nd@175 1f740167-d0ba-4b02-8f16-c7307cbaec5e

--- a/kaede2nd/Version.resx
+++ b/kaede2nd/Version.resx
@@ -123,6 +123,11 @@
  <filtered>
  <filtered>
 
+Microsoft SQL Server 対応化
+筑駒60期縁日班 関川 柊
+ <filtered>
+
+
 前身
 楓ちゃん萌え萌えソフトウェア
 http://ripjohn.net/highschool/kaede/index.html
